--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,9 +6,9 @@ RUN apk add --no-cache gcc musl-dev linux-headers g++
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-# Install OpenTelemetry Auto Instrumentation Here
+# Bootstrap Opentelemetry Auto Instrumentation here
 
-EXPOSE 5000
+EXPOSE 5002
 
 COPY . .
 CMD ["python", "./server.py"]
