using python:3.9-alpine3.14

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,5 @@
-FROM python:3.7-alpine
+FROM python:3.9-alpine3.14
 WORKDIR /code
-
-RUN apk add --no-cache gcc musl-dev linux-headers g++
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
